--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment</title>
-  <script rel="stylesheet" href="index.css"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+ <link rel="stylesheet" href="index.css"></link>
 </head>
 <body>
     <main>
-      <nav>
-
-      </nav>
-        <div>
-          banner
+      <nav class="nav">
+        <div class="logo">
+           <img src="assets/logo-navbar.png">
         </div>
+        <ul class="links">
+           <a href=""><li>Features</li></a> 
+           <a href=""><li>How it works</li></a> 
+           <a href=""><li>Why it<sup>,</sup>s different</li></a>
+        </ul>
+        <button class="btn">
+                 Get Early Access
+        </button>
+      </nav>
+      <div class="hero">
+           <div class="hero-container">
+                 <button class="early-btn"><span class="dot"></span>Early Access open now</button>
+                 <h1>Structured Thinking,</h1>
+                 <h1 class="special">Not just Note-Taking.</h1>
+                 <p>
+                  A private space to store notes, links, and learning summaries — designed to</p><p class="sp">help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                 </p>
+                 <div class="buttons">
+                 <button class="start-btn">Start building your vaults<img src="assets/ArrowRight.png"></button>
+                 <button class="see-btn"><i class="fa-regular fa-circle-play"></i> See how it works</button>
+                 </div>
+           </div>
+         
+      </div>
+      <div>
+        <h1>Notes Don<sup>,</sup>t fail, Structure Does</h1>
+      </div>
     </main>
 </body>
 </html>
