into the footers i go

--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@
            </div>
       </div>
       <div class="ready">
-
+           <h2>Ready To Think More Clearly?</h2>
+           <p id="first">Join thousands of learners who are building their personal knowledge vaults.<br>
+                 Start free, no credit card required.</p>
+                 <button>Get Early Access<img src="assets/ArrowRight.png"> </button>
+                 <p id="second">Free during early access • No credit card needed</p>
       </div>
     </main>
 </body>
