--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
                  <button>Get Early Access<img src="assets/ArrowRight.png"> </button>
                  <p id="second">Free during early access • No credit card needed</p>
       </div>
+      <footer class="last">
+        <div class="element-container">
+          <img class="logo" src="assets/logo-footer.png">
+          <div class="socials">
+              <p>Social Links</p>
+              <ul class="links">
+                   <li class="link"><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                   <li class="link"> <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                   <li class="link"> <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+              </ul>
+          </div>
+          
+        </div>
+        <hr>
+        <p class="copy">&copy; Personal knowledge vault.All rights reserved</p>
+
+      </footer>
     </main>
 </body>
 </html>
